<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="63dp"
        android:layout_height="20dp"
        android:text="@string/popular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toStartOf="@+id/viewAllMenu"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.857" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="386dp"
        android:layout_height="197dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="MissingConstraints">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:iss_auto_cycle="true"
            app:iss_delay="2000"
            app:iss_period="2000"
            app:iss_text_align="CENTER"
            tools:ignore="MissingConstraints" />
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="436dp"
        android:layout_height="415dp"
        android:contentDescription="@string/food_items_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/viewAllMenu"
        android:layout_width="102dp"
        android:layout_height="26dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textviewshape"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/view_menu"
        android:textColor="@color/lightgreen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>