<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/margin"
        android:layout_width="355dp"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:elevation="6dp"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="87dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:elevation="12dp">

            <ImageView
                android:id="@+id/menuImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.304"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/menuFoodName"
                android:layout_width="126dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/spartan_bold"
                android:gravity="center"
                android:text="@string/food_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/menuImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.347" />

            <TextView
                android:id="@+id/menuPrice"
                android:layout_width="34dp"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/green"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.843"
                app:layout_constraintStart_toEndOf="@+id/menuImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.266" />

            <TextView
                android:id="@+id/menuAddToCart"
                android:layout_width="81dp"
                android:layout_height="22dp"
                android:background="@drawable/addtocartshape"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.804"
                app:layout_constraintStart_toEndOf="@+id/menuImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.753" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>