<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook_3_1"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbuttton"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:background="@color/green"
        android:paddingStart="15dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="166dp"
        android:layout_height="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="348dp"
        android:layout_height="70dp"
        android:fontFamily="@font/dancing"
        android:gravity="center"
        android:text="@string/waves_of_food"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="197dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="Deliver Favorite Food"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="272dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="Login to Your Account"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:background="@drawable/whitebutton"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:elevation="5dp"
        android:hint="Email or Phone Number"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:background="@drawable/whitebutton"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="12dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:gravity=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="Or"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="272dp"
        android:layout_height="30dp"
        android:fontFamily="@font/dancing"
        android:gravity="center"
        android:text="Continue With"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:background="@drawable/whitebutton"
        android:drawableLeft="@drawable/google_icon_2"
        android:paddingLeft="15dp"
        android:text="Google"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <TextView
        android:id="@+id/donthavebutton"
        android:layout_width="143dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="Don't Have Account?"
        android:textColor="@color/green"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/design_by_sameerr"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>